# getchlib

./: .gitignore  MANIFEST  README.md  README.md.html  ht.py  index.rst  pyproject.toml  setup.py
getchlib/: __init__.py  ctrl.py  decorators.py  getkey.py  hotkey.py  keynames.py  pressed.py  printer.py  term.py  unix.py  windows.py
getchlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
getchlib/keynames/: __init__.py  raw.py
src/getchlib/: __init__.py  getkey.py  hotkey.py  key.py  pressed.py  term.py  unix.py  windows.py
src/getchlib/parsers/: unix.py  windows.py
