[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "getchlib"
version = "2.0.0"
description = "Library for reading key presses"
authors = [
    {name = "Adam Jenca", email = "jenca.adam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.0"
license = "GPL-2.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
[tool.setuptools.packages.find]
where = ["src"]
[project.urls]
Homepage = "https://github.com/jenca-adam/getchlib"
Bug_Tracker = "https://github.com/jenca-adam/getchlib/issues"
PyPI = "https://pypi.org/project/getchlib"
